<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group
        android:checkableBehavior="single">
    </group>
    <item android:title="@string/embedded_content">
        <menu>
            <item android:title="@string/fish"
                android:id="@+id/id_fish"
                android:icon="@drawable/baseline_set_meal_24"/>
            <item android:title="@string/na"
                android:id="@+id/id_na"
                android:icon="@drawable/baseline_pest_control_24"/>
            <item android:title="@string/sna"
                android:id="@+id/id_sna"
                android:icon="@drawable/baseline_phishing_24"/>
        </menu>
    </item>
    <item android:title="@string/user_generated_content">
        <menu>
            <item android:title="@string/history"
                android:id="@+id/id_history"
                android:icon="@drawable/baseline_record_voice_over_24"/>
        </menu>
    </item>
    <item android:title="@string/webview_html">
        <menu>
            <item android:title="@string/example"
                android:id="@+id/id_example"
                android:icon="@drawable/baseline_html_24"/>

            <item android:title="@string/blowfish"
                android:id="@+id/id_blowfish"
                android:icon="@drawable/baseline_html_24"/>
        </menu>
    </item>
</menu>